Update cd-pipeline.yml for Azure Pipelines

--- a/parrot/cd-pipeline.yml
+++ b/parrot/cd-pipeline.yml
@@ -11,7 +11,7 @@ variables:
 resources: 
   pipelines:
   - pipeline: ci-pipeline
-    source: parrot-ci
+    source: myPhippy.parrot-ci
     trigger:
       enabled: true
       branches:
