--- a/parrot/cd-pipeline.yml
+++ b/parrot/cd-pipeline.yml
@@ -2,7 +2,7 @@ trigger: none
 pr: none
 
 variables:
-- group: myPhippy-demo
+- group: myYAML-Phippy
 - template: ../common/cd-vars-template.yml
   parameters:
       projectName: parrot
