Update ci-pipeline.yml for Azure Pipelines

--- a/phippy/ci-pipeline.yml
+++ b/phippy/ci-pipeline.yml
@@ -14,6 +14,7 @@ pool:
   vmImage: ubuntu-latest
 
 variables:
+- group: myYAML-Phippy
 - template: ../common/ci-vars-template.yml
   parameters:
       projectName: phippy
